# Miniature-Snake.io

./: CMakeLists.txt  README.md  main.cpp
classes/: window.cpp  window.h
src/core/: App.cpp  App.h  Context.cpp  Context.h  Page.cpp  Page.h  Widget.cpp  Widget.h  constants.h
src/pages/: Menu.cpp  Menu.h
src/widgets/: Button.cpp  Button.h
